[gd_scene load_steps=7 format=2]

[ext_resource path="res://Szenen/OG/Task.gd" type="Script" id=1]
[ext_resource path="res://Grafik/Assets/Kinderzimmer/Frames/correct_square.png" type="Texture" id=3]
[ext_resource path="res://Grafik/Assets/Kinderzimmer/Frames/wrong_square.png" type="Texture" id=4]
[ext_resource path="res://Grafik/Assets/Kinderzimmer/Frames/answer_square.png" type="Texture" id=5]


[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=2]
resource_name = "shake"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("myTask:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 16, 0 ), Vector2( 0, 0 ), Vector2( -16, 0 ), Vector2( 0, 0 ), Vector2( 16, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}

[node name="TaskSquare" type="Node2D"]
script = ExtResource( 1 )

[node name="myTask" type="Node2D" parent="."]

[node name="SquareTask" type="AnimatedSprite" parent="myTask"]
position = Vector2( 112, 16 )
frames = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="myTask/SquareTask"]
position = Vector2( 2, -12 )
z_index = 1

[node name="CheckBox" type="CheckBox" parent="myTask/SquareTask"]
margin_left = -111.352
margin_top = 96.8287
margin_right = -87.352
margin_bottom = 120.829
focus_mode = 0
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="myTask/SquareTask"]
margin_left = -116.0
margin_top = -124.0
margin_right = 112.0
margin_bottom = 120.0
mouse_default_cursor_shape = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/shake = SubResource( 2 )
[connection signal="gui_input" from="myTask/SquareTask/Control" to="." method="_on_Control_gui_input"]
